--- a/sample/package.json
+++ b/sample/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "simple-signal-server": "^3.0.0",
+    "socket.io": "^4.7.5",
     "vue": "^3.2.45",
-    "vue-webrtc": "^3.0.1"
+    "vue-webrtc": "^3.0.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
